--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/pkdq/speak-up#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.12.12"
+    "mongoose": "^5.12.12",
+    "slugify": "^1.5.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
