--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "homepage": "https://github.com/pkdq/speak-up#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.11.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.12",
+    "multer": "^1.4.2",
     "slugify": "^1.5.3"
   },
   "devDependencies": {
