--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.12",
     "multer": "^1.4.2",
+    "pug": "^3.0.2",
     "slugify": "^1.5.3"
   },
   "devDependencies": {
